--- a/example/index.html
+++ b/example/index.html
@@ -118,6 +118,11 @@
     padding-top: 3em;
     padding-bottom: 3em;
   }
+
+  section{
+    padding-top: 3em;
+    padding-bottom: 3em;
+  }
   </style>
 </head>
 
@@ -144,7 +149,7 @@
           <article>
             <h1 class="parallux-item" data-parallux-ratio="0.1">Lorem Ipsum</h1>
             <p class="parallux-item" data-parallux-ratio="0.2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum quae dignissimos pariatur praesentium quidem accusantium! Deserunt pariatur, similique, nobis minima earum nihil enim blanditiis delectus ut. Commodi eveniet, nobis illo</p>
-            <p class="parallux-item" data-parallux-ratio="0.3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum quae dignissimos pariatur praesentium quidem accusantium! Deserunt pariatur, similique, nobis minima earum nihil enim blanditiis delectus ut. Commodi eveniet, nobis illo</p>
+            <p class="parallux-item" data-parallux-ratio="0.4" data-parallux-offset="50">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum quae dignissimos pariatur praesentium quidem accusantium! Deserunt pariatur, similique, nobis minima earum nihil enim blanditiis delectus ut. Commodi eveniet, nobis illo</p>
           </article>
         </div>
     </section>
@@ -155,36 +160,36 @@
 
         <p class="parallux-item" data-parallux-ratio="0.1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis minus iusto magnam, eum? Magnam nihil cum illo, beatae quisquam sequi quos atque ea, minus dignissimos fugiat, nesciunt pariatur mollitia provident.</p>
         <p class="parallux-item" data-parallux-ratio="0.15">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat voluptatem est aliquam, ipsa eum saepe at nemo nobis harum provident, amet vero consequuntur architecto eius accusantium porro dicta recusandae quidem!</p>
-        <p class="parallux-item" data-parallux-ratio="0.2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit fuga neque minus. Blanditiis vitae, maiores totam itaque odit sint nesciunt facere delectus excepturi amet nam magnam tempora labore, ducimus assumenda.</p>
-        <p class="parallux-item" data-parallux-ratio="0.25">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores similique officia veritatis assumenda quos earum atque, numquam optio harum nostrum officiis sapiente molestiae reprehenderit. Exercitationem cupiditate quaerat, earum doloremque natus.</p>
+        <p class="parallux-item" data-parallux-ratio="0.2" data-parallux-offset="50">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit fuga neque minus. Blanditiis vitae, maiores totam itaque odit sint nesciunt facere delectus excepturi amet nam magnam tempora labore, ducimus assumenda.</p>
+        <p class="parallux-item" data-parallux-ratio="0.3" data-parallux-offset="100">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores similique officia veritatis assumenda quos earum atque, numquam optio harum nostrum officiis sapiente molestiae reprehenderit. Exercitationem cupiditate quaerat, earum doloremque natus.</p>
 
       </div>
       <div class="right">
 
-      <h1 class="parallux-item" data-parallux-ratio="0.1">Lorem Ipsum</h1>
+      <h1 class="parallux-item" data-parallux-ratio="0.2" data-parallux-offset="-80">Lorem Ipsum</h1>
       <div class="parallux-item" data-parallux-ratio="0.15">
         <img src="http://lorempixel.com/800/460/" alt="">
       </div>
-      <div class="parallux-item" data-parallux-ratio="0.2">
+      <div class="parallux-item" data-parallux-ratio="0.3" data-parallux-offset="50">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat ea ad vero exercitationem, sit maiores ipsa nam doloribus quae similique alias voluptas itaque quidem, culpa debitis modi eius, rerum. Hic!</p>
        </div>
       </div>
     </section>
 
-    <section class="parallux-container block">
+    <section class="parallux-container block overflow-hidden">
       <div class="right">
         <div class="parallux-item" data-parallux-ratio="0.1">
           <img src="http://lorempixel.com/480/320/" alt="">
           </div>
-          <div class="parallux-item" data-parallux-ratio="0.2">
+          <div class="parallux-item" data-parallux-ratio="0.2" data-parallux-offset="30">
           <img src="http://lorempixel.com/320/180/" alt="">
         </div>
       </div>
       <div class="left">
         <article>
-          <h1 class="parallux-item" data-parallux-ratio="0.3">Lorem Ipsum</h1>
-          <p class="parallux-item" data-parallux-ratio="0.4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum quae dignissimos pariatur praesentium quidem accusantium! Deserunt pariatur, similique, nobis minima earum nihil enim blanditiis delectus ut. Commodi eveniet, nobis illo</p>
-          <p class="parallux-item" data-parallux-ratio="0.5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum quae dignissimos pariatur praesentium quidem accusantium! Deserunt pariatur, similique, nobis minima earum nihil enim blanditiis delectus ut. Commodi eveniet, nobis illo</p>
+          <h1 class="parallux-item" data-parallux-ratio="-0.1">Lorem Ipsum</h1>
+          <p class="parallux-item" data-parallux-ratio="-0.05">Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+          <p class="parallux-item" data-parallux-ratio="-0.2" data-parallux-offset="100">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum quae dignissimos pariatur praesentium quidem accusantium! Deserunt pariatur, similique, nobis minima earum nihil enim blanditiis delectus ut. Commodi eveniet, nobis illo</p>
         </article>
       </div>
 
