--- a/example/index.html
+++ b/example/index.html
@@ -185,9 +185,9 @@
         </div>
         <div class="right">
           <article>
-            <h1 class="parallux-item" data-parallux-ratio="-0.3">Lorem Ipsum</h1>
-            <p class="parallux-item" data-parallux-ratio="-0.32">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum quae dignissimos pariatur praesentium quidem accusantium! Deserunt pariatur, similique, nobis minima earum nihil enim blanditiis delectus ut. Commodi eveniet, nobis illo</p>
-            <p class="parallux-item" data-parallux-ratio="-0.34">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum quae dignissimos pariatur praesentium quidem accusantium! Deserunt pariatur, similique, nobis minima earum nihil enim blanditiis delectus ut. Commodi eveniet, nobis illo</p>
+            <h1 class="parallux-item" data-parallux-ratio="-0.3" data-parallux-max="0">Lorem Ipsum</h1>
+            <p class="parallux-item" data-parallux-ratio="-0.32" data-parallux-max="0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum quae dignissimos pariatur praesentium quidem accusantium! Deserunt pariatur, similique, nobis minima earum nihil enim blanditiis delectus ut. Commodi eveniet, nobis illo</p>
+            <p class="parallux-item" data-parallux-ratio="-0.34" data-parallux-max="0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum quae dignissimos pariatur praesentium quidem accusantium! Deserunt pariatur, similique, nobis minima earum nihil enim blanditiis delectus ut. Commodi eveniet, nobis illo</p>
           </article>
         </div>
       </div>
@@ -204,7 +204,7 @@
       </div>
       <div class="right">
 
-      <h1 class="parallux-item" data-parallux-ratio="-0.1">Lorem Ipsum</h1>
+      <h1 class="parallux-item" data-parallux-ratio="-0.1" data-parallux-max="0">Lorem Ipsum</h1>
       <div class="parallux-item" data-parallux-ratio="-0.13">
         <img src="http://lorempixel.com/800/460/" alt="">
       </div>
